--- a/web/server/package.json
+++ b/web/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "ts-node-dev --transpile-only --no-notify api/index.ts",
+    "dev": "ts-node-dev --transpile-only --no-notify --inspect -- api/index.ts",
     "migrate": "prisma migrate dev",
     "generate": "ts-node --transpile-only api/schema",
     "test": "npm run generate && jest",
@@ -29,8 +29,6 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^2.23.0",
-    "@types/jsonwebtoken": "^8.5.1",
-    "@types/uuid": "^8.3.0",
     "apollo-server-express": "^2.25.0",
     "app-root-path": "^3.0.0",
     "bcryptjs": "^2.4.3",
@@ -39,6 +37,7 @@
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "nexus": "^1.0.0",
     "pg-hstore": "^2.3.3",
     "prisma": "^2.24.1",
@@ -47,7 +46,10 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/moment": "^2.13.0",
     "@types/pg": "^8.6.0",
+    "@types/uuid": "^8.3.0",
     "get-port": "^5.1.1",
     "graphql-request": "^3.4.0",
     "jest": "^27.0.4",
