--- a/web/client/package.json
+++ b/web/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.16.2",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "graphql": "^15.5.0",
@@ -25,6 +26,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!antd|@ant-design|rc-.+?|@babel/runtime).+(js|jsx)$"
+    ]
   },
   "eslintConfig": {
     "extends": [
