--- a/web/server/package.json
+++ b/web/server/package.json
@@ -8,6 +8,7 @@
     "dev": "ts-node-dev --transpile-only --no-notify --inspect -- api/index.ts",
     "migrate": "prisma migrate dev",
     "generate": "ts-node --transpile-only api/schema",
+    "seed": "prisma db seed --preview-feature",
     "test": "npm run generate && jest",
     "deploy": "prisma migrate deploy && ts-node --transpile-only api/index.ts"
   },
@@ -28,10 +29,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^2.23.0",
+    "@prisma/client": "^2.25.0",
     "apollo-server-express": "^2.25.0",
     "app-root-path": "^3.0.0",
     "bcryptjs": "^2.4.3",
+    "class-validator": "^0.13.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -40,7 +42,7 @@
     "moment": "^2.29.1",
     "nexus": "^1.0.0",
     "pg-hstore": "^2.3.3",
-    "prisma": "^2.24.1",
+    "prisma": "^2.25.0",
     "ts-node": "^10.0.0",
     "uuid": "^8.3.2"
   },
